samples/_failures_safe/1761199653_9751cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e2b3845.c: In function ‘main’:
./samples/SAFE/__tmp_4e2b3845.c:139:9: error: expected expression at end of input
  139 |         if (entries[i].severity >=
      |         ^~
./samples/SAFE/__tmp_4e2b3845.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4e2b3845.c:139:9: error: expected declaration or statement at end of input
